# chirpstack-api

./: .dockerignore  .gitignore  Dockerfile-csharp  Dockerfile-go  Dockerfile-java  Dockerfile-js  Dockerfile-python  Dockerfile-ruby  Dockerfile-rust  Makefile  README.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: 1.bug.md  2.feature.md
.github/workflows/: main.yml
csharp/: Chirpstack.Api.csproj  Makefile  Readme.md
csharp/protobuf/as/: As.cs  AsGrpc.cs
csharp/protobuf/common/: Common.cs
csharp/protobuf/fuota/: Fuota.cs  FuotaGrpc.cs
csharp/protobuf/geo/: Geo.cs  GeoGrpc.cs
csharp/protobuf/gw/: Gw.cs
go/: Makefile  go.mod  go.sum
go/as/: as.pb.go
go/common/: common.pb.go
go/fuota/: fuota.pb.go
go/geo/: geo.pb.go
go/gw/: gw.pb.go
go/nc/: nc.pb.go
go/ns/: ns.pb.go  profiles.pb.go
java/: Makefile  Makefile-user  README.md  pom.xml
java/template/: pom.xml
js/: Makefile  README.md  package.json
js/as/: as_grpc_pb.d.ts  as_grpc_pb.js  as_pb.d.ts  as_pb.js
js/common/: common_pb.d.ts  common_pb.js
js/fuota/: fuota_grpc_pb.d.ts  fuota_grpc_pb.js  fuota_pb.d.ts  fuota_pb.js
js/geo/: geo_grpc_pb.d.ts  geo_grpc_pb.js  geo_pb.d.ts  geo_pb.js
js/gw/: gw_pb.d.ts  gw_pb.js
js/nc/: nc_grpc_pb.d.ts  nc_grpc_pb.js  nc_pb.d.ts  nc_pb.js
js/ns/: ns_grpc_pb.d.ts  ns_grpc_pb.js  ns_pb.d.ts  ns_pb.js  profiles_pb.d.ts  profiles_pb.js
protobuf/as/: as.proto
protobuf/common/: common.proto
protobuf/fuota/: fuota.proto
protobuf/geo/: geo.proto
protobuf/gw/: gw.proto
protobuf/nc/: nc.proto
protobuf/ns/: ns.proto  profiles.proto
python/: Makefile  setup.py
python/src/: README.md  setup.py
ruby/: Makefile  chirpstack_api.gemspec  rakefile  readme.md
ruby/lib/: chirpstack_api.rb
rust/: Cargo.toml  Makefile  build.rs
rust/proto/chirpstack-api/as/: as.proto
rust/proto/chirpstack-api/as/integration/: integration.proto
rust/proto/chirpstack-api/common/: common.proto
rust/proto/chirpstack-api/fuota/: fuota.proto
rust/proto/chirpstack-api/geo/: geo.proto
rust/proto/chirpstack-api/gw/: gw.proto
rust/proto/chirpstack-api/nc/: nc.proto
rust/proto/chirpstack-api/ns/: ns.proto  profiles.proto
rust/src/: common.rs  fuota.rs  geo.rs  gw.rs  lib.rs  nc.rs  ns.rs
rust/src/as_pb/: mod.rs
rust/src/as_pb/integration/: mod.rs
swagger/: Makefile  go.mod  go.sum
(+98 files in other folders)
