[package]
authors = ["Orne Brocaar <info@brocaar.com>"]
description = "ChirpStack Protobuf / gRPC API definitions."
edition = "2018"
homepage = "https://www.chirpstack.io"
license = "MIT"
name = "chirpstack_api"
repository = "https://github.com/brocaar/chirpstack-api"
version = "3.12.4"

[features]
default = ["grpc_support", "rustfmt"]
grpc_support = ["tonic/transport", "tonic-build/transport", "tokio"]
rustfmt = ["tonic-build/rustfmt"]

[dependencies]
prost = "0.8"
prost-types = "0.8"

tokio = {version = "1.9", features = ["macros"], optional = true}
tonic = {version = "0.5", features = ["codegen", "prost"], default-features = false}

[build-dependencies]
tonic-build = {version = "0.5", features = ["prost"], default-features = false}
