[package]
authors = ["Orne Brocaar <info@brocaar.com>"]
description = "ChirpStack Protobuf / gRPC API definitions."
edition = "2018"
homepage = "https://www.chirpstack.io"
license = "MIT"
name = "chirpstack_api"
repository = "https://github.com/brocaar/chirpstack-api"
version = "3.12.4"

[features]
default = ["grpc_support"]
grpc_support = ["tonic/transport", "tonic-build/transport", "tokio"]

[dependencies]
prost = "0.10"
prost-types = "0.10"

tokio = {version = "1.17", features = ["macros"], optional = true}
tonic = {version = "0.7", features = ["codegen", "prost"], default-features = false}

[build-dependencies]
tonic-build = {version = "0.7", features = ["prost"], default-features = false}
